# apertium-myv-mdf

./: .gitattributes  .gitignore  .test-mt  .test-ref  AUTHORS  HACKING  Makefile.am  Mdf-story-in-mdf-myv-syntax.txt  Mdf-story-in-sent-proc.sh-l-mdf.txt  PURPOSE  README  apertium-myv-mdf.mdf-myv.lrx  apertium-myv-mdf.mdf-myv.t1x  apertium-myv-mdf.myv-mdf.crx  apertium-myv-mdf.myv-mdf.dix  apertium-myv-mdf.myv-mdf.lrx  apertium-myv-mdf.myv-mdf.rlx  apertium-myv-mdf.myv-mdf.t1x  config.status  configure.ac  example1.txt  example2.txt  example3.txt  example4.txt  gt2apertium.cg3r  modes.xml  rm-deriv-cmp.twol  rules.t1x  rules1.t1x
dev/: #ambiguousNominalDecl.mdf.regex#  ambiguousNominalDecl.mdf.regex  ambiguousNominalDecl.myv.regex  ambiguousVerbConj.mdf.regex  ambiguousVerbConj.myv.regex  unambiguousNominalDecl.mdf.regex  unambiguousNominalDecl.myv.regex  unambiguousVerbConj.mdf.regex  unambiguousVerbConj.myv.regex
inc/: parallell-text-not-bidix.freq
t/: config.sh  latest-pending.results  latest-regression.results
test/: mdf-myv-generator-expected.txt  mdf-myv-generator-gold.txt  mdf-myv-input.txt  mdf-myv-interchunk-expected.txt  mdf-myv-lex-expected.txt  mdf-myv-morph-expected.txt  mdf-myv-postchunk-expected.txt  mdf-myv-pretransfer-expected.txt  myv-mdf-disam2-expected.txt  myv-mdf-generator-expected.txt  myv-mdf-generator-gold.txt  myv-mdf-input.txt  myv-mdf-interchunk-expected.txt  myv-mdf-lex-expected.txt  myv-mdf-morph-expected.txt  myv-mdf-postchunk-expected.txt  tests.json
texts/: BryzhinskiM_2012_18.fin.txt  BryzhinskiM_2012_18.mdf.txt  BryzhinskiM_2012_18.myv.txt  BryzhinskiM_2012_18.myv.xml  MishaninaV_1972.mdf.txt  aino_smn.txt  egil_olli.sme.txt  egil_olli.smn.txt  giella.sme.txt  giella.smn.txt  giellagaldu_tyo.sme.txt  giellagaldu_tyo.smn.txt  gollegiella.sme.txt  gollegiella.smn.txt  gotkkat.sme.txt  gotkkat.smn.txt  historia.txt  historia_sme.txt  historia_smn.txt  kn_060215.sme.txt  kn_060215.smn.txt  kn_samediggi_rahpamii_29032008.sme.txt  kn_samediggi_rahpamii_29032008.smn.txt  lars_anders_baer.sme.txt  lars_anders_baer.smn.txt  np_intern_agreement.txt  saamelaiset2.sme.txt  saamelaiset2.smn.txt  saamelaiset_suomessa.sme.txt  saamelaiset_suomessa.smn.1.txt  saamelaiset_suomessa.smn.txt  story.mdf.txt  story.myv.txt  tarina.sme.txt  tarina.smn.txt  udhr_BryzhinskiM_2012_myv.txt  vaalit2012.sme.txt  vajaldumjuovlah.sme.txt  vajaldumjuovlah.smn.txt  ympsiht.sme.txt  (+1 more)
